# FRUT

Jucer2Reprojucer/: CMakeLists.txt  main.cpp
cmake/: Reprojucer.cmake
cmake/Modules/: FindJUCE-find-module.cmake  FindJUCE-helpers.cmake  Findjuce_analytics.cmake  Findjuce_audio_basics.cmake  Findjuce_audio_devices.cmake  Findjuce_audio_formats.cmake  Findjuce_audio_processors.cmake  Findjuce_audio_utils.cmake  Findjuce_blocks_basics.cmake  Findjuce_box2d.cmake  Findjuce_core.cmake  Findjuce_cryptography.cmake  Findjuce_data_structures.cmake  Findjuce_dsp.cmake  Findjuce_events.cmake  Findjuce_graphics.cmake  Findjuce_gui_basics.cmake  Findjuce_gui_extra.cmake  Findjuce_opengl.cmake  Findjuce_osc.cmake  Findjuce_product_unlocking.cmake  Findjuce_video.cmake
cmake/wip/: FindJUCE-helpers.cmake  FindJUCE.cmake  FindJUCEModule.cmake  Findjuce_core.cmake  Findjuce_events.cmake
cmake/wip/modules/: JUCE-macros.cmake  JUCEConfig.cmake  JUCEConfigVersion.cmake
cmake/wip/modules/juce_analytics/: juce_analytics-config.cmake
cmake/wip/modules/juce_audio_basics/: juce_audio_basics-config.cmake
cmake/wip/modules/juce_audio_devices/: juce_audio_devices-config.cmake
cmake/wip/modules/juce_audio_formats/: juce_audio_formats-config.cmake
cmake/wip/modules/juce_audio_processors/: juce_audio_processors-config.cmake
cmake/wip/modules/juce_audio_utils/: juce_audio_utils-config.cmake
cmake/wip/modules/juce_blocks_basics/: juce_blocks_basics-config.cmake
cmake/wip/modules/juce_box2d/: juce_box2d-config.cmake
cmake/wip/modules/juce_core/: juce_core-config.cmake
cmake/wip/modules/juce_cryptography/: juce_cryptography-config.cmake
cmake/wip/modules/juce_data_structures/: juce_data_structures-config.cmake
cmake/wip/modules/juce_dsp/: juce_dsp-config.cmake
cmake/wip/modules/juce_events/: juce_events-config.cmake
cmake/wip/modules/juce_graphics/: juce_graphics-config.cmake
cmake/wip/modules/juce_gui_basics/: juce_gui_basics-config.cmake
cmake/wip/modules/juce_gui_extra/: juce_gui_extra-config.cmake
cmake/wip/modules/juce_opengl/: juce_opengl-config.cmake
cmake/wip/modules/juce_osc/: juce_osc-config.cmake
cmake/wip/modules/juce_product_unlocking/: juce_product_unlocking-config.cmake
cmake/wip/modules/juce_video/: juce_video-config.cmake
docs/: index.rst
docs/ADC-2017/: ADC-2017.sla  index.rst
docs/Reprojucer.cmake/command/: jucer_export_target.rst  jucer_export_target_configuration.rst  jucer_project_module.rst
tests/: .gitattributes  diff-compiler-args.cmake
tests/Audio_Application/NewProject420/: NewProject420.jucer
tests/Audio_Application/NewProject420/Source/: Main.cpp
tests/Audio_Application/NewProject431/: NewProject431.jucer
tests/Audio_Application/NewProject431/Source/: Main.cpp
tests/Audio_Application/NewProject500/: NewProject500.jucer
tests/Audio_Application/NewProject500/Source/: Main.cpp
tests/Audio_Application/NewProject521/: NewProject521.jucer
tests/Audio_Application/NewProject521/Source/: Main.cpp
tests/Audio_Plug-In/NewProject420/: NewProject420.jucer
tests/Audio_Plug-In/NewProject420/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/Audio_Plug-In/NewProject431/: NewProject431.jucer
tests/Audio_Plug-In/NewProject500/: NewProject500.jucer
tests/Audio_Plug-In/NewProject521/: NewProject521.jucer
tests/Console_Application/NewProject420/: NewProject420.jucer
tests/Console_Application/NewProject431/: NewProject431.jucer
tests/Console_Application/NewProject500/: NewProject500.jucer
tests/Console_Application/NewProject521/: NewProject521.jucer
tests/Dynamic_Library/NewProject420/: NewProject420.jucer
tests/Dynamic_Library/NewProject431/: NewProject431.jucer
tests/Dynamic_Library/NewProject500/: NewProject500.jucer
tests/Dynamic_Library/NewProject521/: NewProject521.jucer
tests/EmptyConsoleApp/4.2.0/: CMakeLists.txt  EmptyConsoleApp.jucer
tests/GUI_Application/NewProject420/: NewProject420.jucer
tests/GUI_Application/NewProject431/: NewProject431.jucer
tests/GUI_Application/NewProject500/: NewProject500.jucer
tests/GUI_Application/NewProject521/: NewProject521.jucer
tests/Static_Library/NewProject420/: NewProject420.jucer
tests/Static_Library/NewProject431/: NewProject431.jucer
tests/Static_Library/NewProject500/: NewProject500.jucer
tests/Static_Library/NewProject521/: NewProject521.jucer
tests/exporters/: LINUX_MAKE.cmake  VS.cmake  VS2013.cmake  VS2015.cmake  XCODE_MAC.cmake
tests/hexa/: CMakeLists.txt  hexa.jucer
tests/hexa/Builds/VisualStudio2017/: hexa.sln  hexa_ConsoleApp.vcxproj  hexa_ConsoleApp.vcxproj.filters  resources.rc
tests/hexa/JuceLibraryCode/: JuceHeader.h
tests/hexa/Source/: Main.cpp
tests/simplediff/: simplediff.cmake  test_simplediff.cmake
(+17 files in other folders)
